package interfaces;

public interface Combustible {
    void recargar(double cantidad);
    String getTipoCombustible();
}